--- a/8_Studenti/lsimunov/1. HTML/Bonus/Parcijalni ispit/index.html
+++ b/8_Studenti/lsimunov/1. HTML/Bonus/Parcijalni ispit/index.html
@@ -31,29 +31,30 @@
       <section>
         <h1 id="kontakt">Kontakt</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <form for="kontakt-obrazac" action="" method="post"></form>
+        <form name="kontakt-obrazac" action=" " method="post"></form>
         <p>
-        <label for="ime-prezime">Ime i prezime <br /></label>
-        <input id="ime-prezime" type="text" name="ime" required>
+        <label for="ime-prezime">Ime i prezime </label><br />
+        <input id="ime-prezime" type="text" name="ime" required />
         </p>
         <p>
           <label for="email">E-mail<br /></label>
-          <input type="email" name="e-mail" id="e-mail" required>
+          <input type="email" name="e-mail" id="e-mail" required />
         </p>
         <p>
           <label for="poruka">Poruka</label><br />
           <textarea name="poruka" id="poruka" rows="5" cols="45"></textarea>
         </p>
         <p>
-          <input type="submit" name="submit_btn" value="Pošalji poruku">
+          <input type="submit" name="submit_btn" value="Pošalji poruku" />
         </p>
       </section>
     </section>
   </main>
   <hr />
   <footer>
-    <p><i>Avanturist &copy; 2019</i></p>
-    <img src="mail.png" alt="koverta!">
+    <p><em>Avanturist &copy; 2019</em></p>
+    <a href="mailto:info@avanturist.com"><img src="mail.png" alt="e-mail">
+    </a>
   </footer>
 </body>
 </html>
