--- a/8_Studenti/lsimunov/9_Bonus/digirn/html_css/index.html
+++ b/8_Studenti/lsimunov/9_Bonus/digirn/html_css/index.html
@@ -7,15 +7,24 @@
   <meta name="keywords" content="digirn radni nalog">
   <meta name="author" content="Luka">
   <title>DIGIRN</title>
+  <link rel="shortcut icon" href="../assets/digirn-trans.png" type="image/x-icon">
+  <link rel="stylesheet" href="./css/osnovno.css">
 </head>
 <body>
   <header>
-    <img src="..//assets/digirn.png" alt="digirn logo" width="150" height="150">
-    <h2>DIGIRN</h2>
+    <div id="header-container">
+      <img src="../assets/digirn.png" alt="digirn logo" width="150" height="150">
+      <h2>DIGIRN</h2>
+    </div>
     <nav>
       <ul>
-       <li><a href="lista.html">Nalozi</a></li>
+       <li><a href="./html/lista.html">Nalozi</a></li>
       </ul>
+      <div id="hamburger-icon" onclick="">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
     </nav>
   </header>
   <main>
@@ -26,7 +35,7 @@
         DIGIRN je aplikacija za praćenje radnih naloga - DIGItalni Radni Nalozi
       </p>
       <br>
-      <p>Verzija 1 - samo HTML</p>
+      <p>Verzija 2 - HTML + CSS</p>
     </section>
     
   </main>
